vendor/serde_repr/tests/ui/repr_c.stderr
error: unsupported repr for serde_repr enum
 --> tests/ui/repr_c.rs:4:8
  |
4 | #[repr(C)]
  |        ^
